Updated script for creating all figures (`all_figs.py`).

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Raw spectra file (too large)
 Properties/raw_spectra.pkl
+Properties/spectra_dict.pkl
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
